--- a/.github/workflows/hashnode.yml
+++ b/.github/workflows/hashnode.yml
@@ -19,7 +19,7 @@ jobs:
           USERNAME: "cosmicqbit" # Hashnode Username
           COUNT: 3 # MAX Visisble
           STYLE: "blog-left"
-          BLOG_URL: "https://blog.cosmicqbit.dev/"
+          BLOG_URL: "https://cosmicqbit.hashnode.dev/"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 Footer
