--- a/.github/workflows/hashnode.yml
+++ b/.github/workflows/hashnode.yml
@@ -3,7 +3,7 @@ name: "📚 latest Blog"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * *" 
+    - cron: "0 */24 * * *" 
 
 jobs:
   update_blogs:
